--- a/Views/Home/SalaI/Perdiste1.cshtml
+++ b/Views/Home/SalaI/Perdiste1.cshtml
@@ -10,7 +10,7 @@
     document.addEventListener('keydown', function(event) {
         if (event.code === 'Space') {
             event.preventDefault();
-            window.location.href = '/Home/Index';
+            window.location.href = '/Home/Historia';
         }
     });
 </script>
