--- a/Views/Home/SalaI/PrimerCuarto.cshtml
+++ b/Views/Home/SalaI/PrimerCuarto.cshtml
@@ -2,10 +2,128 @@
     ViewData["Title"] = "Sala I";
 }
 
+<style>
+    body {
+        background-image: url('/Imagenes/CuartoI.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin: 0;
+        padding: 0;
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    .cofre, .libro, .puertaII, .velas, .cruz, .adorno, .cuadro1, .cuadro2 {
+        position: absolute;
+    }
+
+    .cofre a, .libro a, .puertaII a, .velas a, .cruz a, .adorno a, .cuadro1 a, .cuadro2 a {
+        display: block;
+        position: absolute;
+        cursor: pointer;
+        background: rgba(255,255,255,0);
+    }
+
+    .cofre a {
+        left: 34vw;   
+        top: 67vh;    
+        width: 10vw;  
+        height: 12vh; 
+    }
+
+    .libro a {
+        left: 38vw;   
+        top: 42vh;    
+        width: 8vw;   
+        height: 8vh;  
+    }
+
+    .puertaII a {
+        left: 22vw;    
+        top: 36vh;    
+        width: 4vw;   
+        height: 12vh; 
+    }
+
+    .velas a {
+        left: 34vw;   
+        top: 67vh;    
+        width: 10vw;  
+        height: 12vh; 
+    }
+
+    .cruz a {
+        left: 38vw;   
+        top: 42vh;    
+        width: 8vw;   
+        height: 8vh;  
+    }
+
+    .adorno a {
+        left: 22vw;    
+        top: 36vh;    
+        width: 4vw;   
+        height: 12vh; 
+    }
+
+    .cuadro1 a {
+        left: 22vw;    
+        top: 36vh;    
+        width: 4vw;   
+        height: 12vh;
+    }
+
+    .cuadro2 a {
+        left: 22vw;    
+        top: 36vh;    
+        width: 4vw;   
+        height: 12vh;
+    }
+
+    h1 {
+        position: absolute;
+        left: 2vw;
+        top: 2vh;
+        z-index: 2;
+    }
+</style>
+
 <h1>Tiempo restante: <span id="contador">@ViewBag.segs</span> segundos</h1>
 
+<div class="mensaje">¡Tienes 50 segundos para buscar una pista!</div>
+
 <div class="cofre">
-    <a href="@Url.Action("Cofre", "Home")"> </a>
+    <a href="#" onclick="abrirPopup(); return false;"></a>
+</div>
+    
+<div class="libro">
+    <a href="@Url.Action("Libro")"></a>
+</div>
+
+<div class="puertaII">
+    <a href="@Url.Action("NoDisponible")"></a>
+</div>
+
+<div class="velas">
+    <a href="@Url.Action("Velas")"></a>
+</div>
+
+<div class="cruz">
+    <a href="@Url.Action("NoDisponible")"></a>
+</div>
+
+<div class="adorno">
+    <a href="@Url.Action("Secreto")"></a>
+</div>
+
+<div class="cuadro1">
+    <a href="@Url.Action("NoDisponible")"></a>
+</div>
+
+<div class="cuadro2">
+    <a href="@Url.Action("Secreto")"></a>
 </div>
 
 @section Scripts 
@@ -20,9 +138,12 @@
 
             if (tiempo <= 0) {
                 clearInterval(reloj);
-                window.location.href = '/Home/Perdiste';
+                window.location.href = '/Home/Perdiste1';
             }
         }, 1000);
+
+        function abrirPopup() {
+            window.open('@Url.Action("Cofre")', "Cofre", "width=400, height=300")
+        }
     </script>
 }
-
