--- a/Views/Home/Presentacion/Historia.cshtml
+++ b/Views/Home/Presentacion/Historia.cshtml
@@ -10,19 +10,6 @@ body {
     padding: 0;
 }
 
-#contenedor-historia {
-    width: 80%;
-    margin-top: 5%;
-    margin-left: 10%;
-    margin-right: 10%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 3%;
-    padding-right: 3%;
-    background: black;
-    text-align: center;
-}
-
 #titulo-typewriter {
     color: white;
     font-size: 400%;
@@ -72,7 +59,7 @@ body {
 <script>
 const titulo = "La Revelación:";
 const nombre = "@ViewBag.nombre";
-const historia = `Era una noche oscura y fría el día 13 de Marzo de 1998 en Dayton, Ohio, cuando el/la detective ${nombre} fue a investigar el asesinato de un cura llamado John Cesar a su iglesia a las afueras de la ciudad. Al principio no se encontró con tanto, además de unos símbolos no vistos ántes por ${nombre}, pero al revisar los cuartos encontró una puerta secreta apuntando hacia el subsuelo. En esta puerta estaba en gigante el número romano "I" y abajo el símbolo previamente visto por ${nombre} y éste se dio cuenta que esa iglesia era más que una zona de rezos. Con un poco de esfuerzo pudo abrir la puerta, pero lo que vería dentro no se lo hubiera imaginado nunca, había un cuarto lleno de artefactos de lo que parecía oro y habían muchas cosas allí. Se puso a investigar.`;
+const historia = `Era una noche oscura y fría el día 13 de Marzo de 1998 en Dayton, Ohio, cuando el/la detective ${nombre} fue a investigar el asesinato de un cura llamado John Cesar a su iglesia a las afueras de la ciudad. Al principio no se encontró con tanto, además de unos símbolos no vistos antes por ${nombre}, pero al revisar los cuartos encontró una puerta secreta apuntando hacia el subsuelo. En esta puerta estaba en gigante el número romano "I" y abajo el símbolo previamente visto por ${nombre} y éste se dio cuenta que esa iglesia era más que una zona de rezos. Con un poco de esfuerzo pudo abrir la puerta, pero lo que vería dentro no se lo hubiera imaginado nunca, había un cuarto lleno de artefactos de lo que parecía oro y habían muchas cosas allí. Se puso a investigar.`;
 
 const h1Element = document.getElementById('titulo-typewriter');
 const pElement = document.getElementById('historia-typewriter');
