--- a/Views/Home/SalaI/NoDisponibleCofre.cshtml
+++ b/Views/Home/SalaI/NoDisponibleCofre.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "NoDisponible";
+    ViewData["Title"] = "NoDisponibleCofre";
 }
 <style>
     
@@ -23,7 +23,7 @@ body {
 
 #titulo-cuarto {
     color: white;
-    font-size: 1000%;
+    font-size: 300%;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     margin-bottom: 15%;
@@ -83,13 +83,13 @@ function playButtonSoundAndRedirect() {
         buttonSound.currentTime = 0;
         buttonSound.play().then(() => {
             setTimeout(() => {
-                window.location.href = '/Home/PrimerCuarto';
+                window.location.href = '/Home/Cofre';
             }, 400);
         }).catch(() => {
-            window.location.href = '/Home/PrimerCuarto';
+            window.location.href = '/Home/Cofre';
         });
     } catch (e) {
-        window.location.href = '/Home/PrimerCuarto';
+        window.location.href = '/Home/Cofre';
     }
 }
 </script> 
